crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.hook-call-freezes-captured-identifier/error.txt
Found 1 error:

Error: This value cannot be modified

Modifying a value previously passed as an argument to a hook is not allowed. Consider moving the modification before calling the hook.

error.hook-call-freezes-captured-identifier.ts:13:2
  11 |   });
  12 |
> 13 |   x.value += count;
     |   ^ value cannot be modified
  14 |   return <Stringify x={x} cb={cb} />;
  15 | }
  16 |
